完成登出服務，列表透明度待處理

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -6,7 +6,7 @@
 </header>
 <body>
     
-    <button id="drawer">drawer</button>
+    <button id="drawer">設定</button>
     <div id="user_info">
         <label id="Name">{{ .Name }}</label><br>
         <button>月</button><br>
