修正無法觸發月份調控按鈕

--- a/HTML/HomePage.html
+++ b/HTML/HomePage.html
@@ -14,7 +14,7 @@
         <button>一生</button><br>
         <button onclick="LogOut()">Log out</button><br>
     </div>
-    <label id="Search"></label><button id="backward_month" onclick="month_move(-1)"><</button><button id="forward_month" onclick="month_move(1)">></button>
+    <label id="Search" class="time-change"></label><button id="backward_month"class="time-change" onclick="month_move(-1)"><</button><button id="forward_month" class="time-change" onclick="month_move(1)">></button>
     
     <div id="Tables">
         <table id="Payment_table" class="bill_table"></table>
