--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="http://127.0.0.1:8086/CSS/LogInPage.css">
 </header>
 <body>
-    <a href="/user/sign_in">don't have account?</a>
+    <a href="/user/signup">don't have account?</a>
     <form action="/user/login" method="post">
         <h3>UserName</h3>
         <input type="text" name="name" size="20">
