--- a/HTML/LogIn.html
+++ b/HTML/LogIn.html
@@ -7,7 +7,7 @@
 <body>
     <a href="/user/signup">don't have account?</a>
     <form action="/user/login" method="post">
-        <h3>UserName</h3>
+        <h3>Account</h3>
         <input type="text" name="name" size="20">
         <h3>Password</h3>
         <input type="password" name="password" size="30"><br>
